--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,8 @@ ol, ul {
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
 }
 
 .square--active {
@@ -95,4 +95,14 @@ ol, ul {
 
 .game-order-btn--ascending {
     background-color: rgb(214, 95, 16);
+}
+
+@media screen and (max-width: 750px) {
+    .game-container {
+        flex-direction: column !important;
+        align-items: center;
+    }
+    .game-info {
+        margin-top: 30px;
+    }
 }
